--- a/app/src/main/res/layout/item_in_type_food.xml
+++ b/app/src/main/res/layout/item_in_type_food.xml
@@ -26,7 +26,8 @@
             android:padding="5dp"
             android:text="Sample title"
             android:textColor="@android:color/black"
-            android:textSize="18sp" />
+            android:textSize="19sp"
+            android:fontFamily="sans-serif-condensed"/>
 
 
     </LinearLayout>
