--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,7 +4,7 @@
     <item android:id="@+id/action_search"
         android:title="Search"
         android:icon="@drawable/ic_search_black_24dp"
-        app:showAsAction="collapseActionView|always"
+        app:showAsAction="collapseActionView|always|withText"
         app:actionViewClass="android.support.v7.widget.SearchView"
         android:layout_width="wrap_content" />
 </menu>
