--- a/app/src/main/res/layout/content_detail_food.xml
+++ b/app/src/main/res/layout/content_detail_food.xml
@@ -11,8 +11,6 @@ app:layout_behavior="@string/appbar_scrolling_view_behavior">
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
         >
         <LinearLayout
                 android:layout_width="match_parent"
@@ -22,7 +20,7 @@ app:layout_behavior="@string/appbar_scrolling_view_behavior">
                 >
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="150dp"
+                    android:layout_height="170dp"
                     android:orientation="vertical"
                     android:background="@color/colorPrimary">
                     <LinearLayout
@@ -31,23 +29,23 @@ app:layout_behavior="@string/appbar_scrolling_view_behavior">
                         android:orientation="vertical"
                         android:layout_margin = "10dp">
                         <TextView
-                            android:paddingTop="10dp"
+                            android:paddingTop="5dp"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:id="@+id/toolbar_title"
                             android:text="Gà rán mật ong"
                             android:paddingBottom="5dp"
                             android:fontFamily="sans-serif-condensed"
-                            android:textSize="16sp"
+                            android:textSize="22sp"
                             android:textColor="@color/white"
                             />
                         <TextView
                             android:id="@+id/txt_name_food"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
-                            android:paddingBottom="10dp"
-                            android:paddingTop="8dp"
-                            android:textSize="10dp"
+                            android:paddingBottom="8dp"
+                            android:paddingTop="5dp"
+                            android:textSize="12dp"
                             android:fontFamily="sans-serif"
                             android:text="Món ăn chính"
                             android:textAllCaps="true"
@@ -61,6 +59,7 @@ app:layout_behavior="@string/appbar_scrolling_view_behavior">
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:layout_marginBottom="5dp"
                         android:orientation="horizontal"
                         >
                         <LinearLayout
@@ -72,13 +71,13 @@ app:layout_behavior="@string/appbar_scrolling_view_behavior">
                             <ImageView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:src="@drawable/food_variant"
+                                android:src="@drawable/rice"
                                 android:layout_gravity="center"
                                 android:layout_weight="2"/>
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="abc"
+                                android:text="4"
                                 android:layout_weight="1"
                                 android:textColor="@color/white"
                                 android:gravity="center"
@@ -91,7 +90,7 @@ app:layout_behavior="@string/appbar_scrolling_view_behavior">
                                 android:gravity="center"
                                 android:textSize="15dp"
                                 android:textStyle="bold"
-                                android:text="2 people"/>
+                                android:text="Khẩu phần"/>
                         </LinearLayout>
                         <LinearLayout
                             android:layout_width="wrap_content"
@@ -102,13 +101,13 @@ app:layout_behavior="@string/appbar_scrolling_view_behavior">
                             <ImageView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:src="@drawable/food_variant"
+                                android:src="@drawable/fire"
                                 android:layout_gravity="center"
                                 android:layout_weight="2"/>
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="abc"
+                                android:text="700"
                                 android:layout_weight="1"
                                 android:textColor="@color/white"
                                 android:gravity="center"
@@ -121,7 +120,40 @@ app:layout_behavior="@string/appbar_scrolling_view_behavior">
                                 android:gravity="center"
                                 android:textSize="15dp"
                                 android:textStyle="bold"
-                                android:text="2 people"/>
+                                android:text="Calories"/>
+                        </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:orientation="vertical"
+                            android:layout_weight="1"
+                            android:weightSum="4">
+
+                            <ImageView
+                                android:id="@+id/imageView"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_weight="2"
+                                android:src="@drawable/cart" />
+
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:text="10"
+                                android:layout_weight="1"
+                                android:textColor="@color/white"
+                                android:gravity="center"
+                                />
+                            <TextView
+                                android:layout_weight="1"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:textColor="@color/white"
+                                android:gravity="center"
+                                android:textSize="15dp"
+                                android:textStyle="bold"
+                                android:text="Nguyên liệu"/>
                         </LinearLayout>
                         <LinearLayout
                             android:layout_width="wrap_content"
@@ -132,13 +164,13 @@ app:layout_behavior="@string/appbar_scrolling_view_behavior">
                             <ImageView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:src="@drawable/food_variant"
+                                android:src="@drawable/clock_fast"
                                 android:layout_gravity="center"
                                 android:layout_weight="2"/>
                             <TextView
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="abc"
+                                android:text="30"
                                 android:layout_weight="1"
                                 android:textColor="@color/white"
                                 android:gravity="center"
@@ -151,46 +183,16 @@ app:layout_behavior="@string/appbar_scrolling_view_behavior">
                                 android:gravity="center"
                                 android:textSize="15dp"
                                 android:textStyle="bold"
-                                android:text="2 people"/>
-                        </LinearLayout>
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="match_parent"
-                            android:orientation="vertical"
-                            android:layout_weight="1"
-                            android:weightSum="4">
-                            <ImageView
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:src="@drawable/food_variant"
-                                android:layout_gravity="center"
-                                android:layout_weight="2"/>
-                            <TextView
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:text="abc"
-                                android:layout_weight="1"
-                                android:textColor="@color/white"
-                                android:gravity="center"
-                                />
-                            <TextView
-                                android:layout_weight="1"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:textColor="@color/white"
-                                android:gravity="center"
-                                android:textSize="15dp"
-                                android:textStyle="bold"
-                                android:text="2 people"/>
+                                android:text="Phút"/>
                         </LinearLayout>
                     </LinearLayout>
                 </LinearLayout>
         </LinearLayout>
         <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            android:focusableInTouchMode="false">
+            >
             <LinearLayout android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:orientation="vertical">
