--- a/app/src/main/res/layout/fragment_nguyen_lieu.xml
+++ b/app/src/main/res/layout/fragment_nguyen_lieu.xml
@@ -1,10 +1,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rl"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    tools:showIn="@layout/activity_detail_food"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:padding="16dp"
-    tools:context=""
+    android:nestedScrollingEnabled="true"
+    android:descendantFocusability="blocksDescendants"
     android:background="#f7f9f4"
     >
     <RelativeLayout
@@ -37,7 +39,7 @@
     </RelativeLayout>
     <ListView
         android:id="@+id/lv"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:choiceMode="multipleChoice"
         android:layout_below="@id/linerText"
