--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -9,11 +9,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-        <ImageView
+
+        <ViewFlipper
             android:layout_width="match_parent"
-            android:layout_height="200dp"
             android:layout_margin="4dp"
-            android:background="@drawable/background"/>
+            android:layout_height="200dp"
+            android:id="@+id/view_flipper">
+
+        </ViewFlipper>
         <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
